kubernetes/aggregator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregator-app
  namespace: monitoring-app
spec:
  replicas: 1

  selector:
    matchLabels:
      app: aggregator-app

  template:
    metadata:
      labels:
        app: aggregator-app

    spec:
      containers:
        - name: aggregator-app

          image: vishalmindfiresolutions/monitor-aggregator:1.0.1

          imagePullPolicy: IfNotPresent

          ports:
            - name: aggregator
              containerPort: 6000

          resources:
            requests:
              cpu: 50m
              memory: 128Mi

            limits:
              cpu: 100m
              memory: 248Mi

          livenessProbe:
            httpGet:
              path: /healthz
              port: aggregator

            initialDelaySeconds: 15
            periodSeconds: 20

          readinessProbe:
            httpGet:
              path: /healthz
              port: aggregator

            initialDelaySeconds: 5
            periodSeconds: 10

          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
