kubernetes/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: master-app
  namespace: monitoring-app
spec:
  replicas: 2

  selector:
    matchLabels:
      app: master-app

  template:
    metadata:
      labels:
        app: master-app

    spec:
      containers:
        - name: master-app

          image: vishalmindfiresolutions/monitor:1.0.0

          imagePullPolicy: IfNotPresent

          ports:
            - name: app-service
              containerPort: 4000

          resources:
            requests:
              cpu: 100m
              memory: 128Mi

            limits:
              cpu: 200m
              memory: 248Mi

          livenessProbe:
            httpGet:
              path: /healthz
              port: app-service

            initialDelaySeconds: 15
            periodSeconds: 20

          readinessProbe:
            httpGet:
              path: /healthz
              port: app-service

            initialDelaySeconds: 5
            periodSeconds: 10

          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
