kubernetes/aggregator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aggregator
  namespace: monitoring-app
  labels:
    app: aggregator
spec:
  selector:
    app: aggregator-app
  ports:
    - name: aggregator
      port: 6000
      targetPort: aggregator
