kubernetes/master-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: master-app
  ports:
    - port: 80
      targetPort: 4000
