kubernetes/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-metrics
  namespace: monitoring-app
  labels:
    app: worker
spec:
  selector:
    app: worker

  ports:
    - name: metrics
      port: 5000
      targetPort: metrics
