kubernetes/ingress-grafna.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring-app
spec:
  ingressClassName: nginx

  rules:
    - host: grafana.monitor.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
