kubernetes/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitor-app-ingress
spec:
  ingressClassName: nginx

  rules:
    - host: service.monitor.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 80
